--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<header>
 					<h2>This is a resume of my life</h2>
 				</header>
-				<p>I want you to understand me better, I'm not only a electronic engineer, I'm a person that like to learn and exceed my limits, so is your company the right one for me? </p>
+				<p>I want you to know me better, I'm not only a electronic engineer, I'm a person that like to learn and surpass my limits, so is your company the right one for me? </p>
 				<footer>
 					<a href="#first" class="button style2 scrolly">Yes</a>
 				</footer>
@@ -45,7 +45,7 @@
 						<h2>My years<br />
 						in school</h2>
 					</header>
-					<p>My grades in school were too bad until i read the book "Álgebra Baldor" it was the moment that i realize how grateful was see the result of my efforts</p>
+					<p>My grades in school were too bad until I read the book Algebra Baldor it was the moment that I realize how rewarding was see the result of my efforts</p>
 				</div>
 			</article>
 
@@ -58,7 +58,7 @@
 						<h2>University<br />
 						the place of dreams</h2>
 					</header>
-					<p>In the University i try to do everything that seems cool, so my best proyects were a MiniSumo, 
+					<p>In the University I try to do everything that seems cool, so my best proyects were a MiniSumo, 
 							a line follower and a Batak</p>
 				</div>
 			</article>
@@ -71,7 +71,7 @@
 										 project</h2>
 									</header>
 									<p> Back in 2016 i wanted to do a line follower but i hadn't money to buy the best materials
-										so with 30 dolars and some gift from my professors my line follower end with one arduino,
+										so with 30 dolars and some gift from my professors I builded it with one arduino,
 										two sensors, one h bridge , two motors and two wheels. 
 										
 									</p>
@@ -86,8 +86,7 @@
 								Sly</h2>
 							</header>
 							<p>"Sly" was the name of my first minisumo in 2018, i really put to much effort in him, and i'm proud of the 
-								9 routines that i made  and can also be chosen with a controller of tv. I'm sad that i can't continue with
-								him because the next year was my thesis.
+								9 routines that i made  and can also be chosen with a controller of tv.
 								
 							</p>
 						</div>
