update index.html and electronic engineer degree

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 				</header>
 				<div class="inner gallery">
 					<div class="row gtr-0">
-						<div class="col-3 col-12-mobile"><a href="images/fulls/agustiniano.png" class="image fit"><img src="images/thumbs/agustiniano.jpg" alt="" title="high school degree" /></a></div>
+						<div class="col-3 col-12-mobile"><a href="images/fulls/UDI.png" class="image fit"><img src="images/thumbs/UDI.png" alt="" title="Electronic Engineer degree" /></a></div>
 						<div class="col-3 col-12-mobile"><a href="images/thumbs/diseñoDeProductosElectronicosConMicrocontroladores.jpg" class="image fit"><img src="images/thumbs/diseñoDeProductosElectronicosConMicrocontroladores.jpg" alt="" title="Course design of electronic products with microcontrollers" /></a></div>
 						<div class="col-3 col-12-mobile"><a href="images/thumbs/generacionTransformacionYUsoDeLaEnergiaElectrica.jpg" class="image fit"><img src="images/thumbs/generacionTransformacionYUsoDeLaEnergiaElectrica.jpg" alt="" title="Course generation, transformation and use of the electrical energy" /></a></div>
 						<div class="col-3 col-12-mobile"><a href="images/thumbs/plcEnLosSistemasScada.jpg" class="image fit"><img src="images/thumbs/plcEnLosSistemasScada.jpg" alt="" title="Course the PLC in scada systems" /></a></div>
@@ -131,7 +131,7 @@
 						<div class="col-3 col-12-mobile"><a href="images/thumbs/aplicacionPlcAutomatizacionProcesosInsdustriales.jpg" class="image fit"><img src="images/thumbs/aplicacionPlcAutomatizacionProcesosInsdustriales.jpg" alt="" title="Course aplication of PLC in the automatization of industrial process" /></a></div>
 						<div class="col-3 col-12-mobile"><a href="images/fulls/electronicaDigitalSecuencial.jpg" class="image fit"><img src="images/thumbs/electronicaDigitalSecuencial.jpg" alt="" title="Course sequential digital electronic." /></a></div>
 						<div class="col-3 col-12-mobile"><a href="images/thumbs/diseñoElaboracionCircuitosImpresos.jpg" class="image fit"><img src="images/thumbs/diseñoElaboracionCircuitosImpresos.jpg" alt="" title="Course design and elaboration of PCB" /></a></div>
-						
+						<div class="col-3 col-12-mobile"><a href="images/fulls/agustiniano.png" class="image fit"><img src="images/thumbs/agustiniano.jpg" alt="" title="high school degree" /></a></div>
 					</div>
 
 				</div>
